kube/employee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: employee:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: employee
spec:
  selector:
    app: employee
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
