kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: sysad.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee
                port:
                  number: 80
